[go] feat: change faulty part id to faulty part serial, also update docs
