# backend-go/docs/swagger.json
@@ -2062,7 +2062,7 @@
                 }
             }
         },
-        "/users": {
+        "/technicians/available": {
             "get": {
                 "security": [
                     {
@@ -2083,6 +2083,61 @@
                 "responses": {
                     "200": {
                         "description": "Technicians retrieved successfully",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/dto.APIResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/dto.UserDTO"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/dto.APIResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.APIResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/users": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Retrieve a list of all users",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Get all users",
+                "responses": {
+                    "200": {
+                        "description": "Users retrieved successfully",
                         "schema": {
                             "allOf": [
                                 {
@@ -2444,18 +2499,13 @@
         "dto.CreateClaimItemRequest": {
             "type": "object",
             "required": [
-                "cost",
-                "faulty_part_id",
+                "faulty_part_serial",
                 "issue_description",
                 "part_category_id",
                 "type"
             ],
             "properties": {
-                "cost": {
-                    "type": "number",
-                    "minimum": 0
-                },
-                "faulty_part_id": {
+                "faulty_part_serial": {
                     "type": "string"
                 },
                 "issue_description": {
@@ -2464,9 +2514,6 @@
                     "minLength": 10
                 },
                 "part_category_id": {
-                    "type": "string"
-                },
-                "replacement_part_id": {
                     "type": "string"
                 },
                 "type": {
@@ -2479,6 +2526,7 @@
             "required": [
                 "customer_id",
                 "description",
+                "kilometers",
                 "technician_id",
                 "vehicle_id"
             ],
@@ -2490,6 +2538,9 @@
                     "type": "string",
                     "maxLength": 1000,
                     "minLength": 10
+                },
+                "kilometers": {
+                    "type": "integer"
                 },
                 "technician_id": {
                     "type": "string"
@@ -2695,6 +2746,9 @@
                 "id": {
                     "type": "string"
                 },
+                "kilometers": {
+                    "type": "integer"
+                },
                 "staff_id": {
                     "type": "string"
                 },
@@ -2767,7 +2821,7 @@
                 "created_at": {
                     "type": "string"
                 },
-                "faulty_part_id": {
+                "faulty_part_serial": {
                     "type": "string"
                 },
                 "id": {
